--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Create Your VERY OWN Todolist!</h1>
-    <a href="/login"> Login</a>
-    <a href="/signup"> Signup</a>
+    <div class="container">
+        <main>
+        <h1>Create Your VERY OWN Todolist!</h1>
+        <p class="stack">
+            <a href="/login" class="btn btn-primary" id="btn-login">Login</a>
+            <a href="/signup" class="btn btn-primary" id="btn-signup">Signup</a>
+        </p>
+        </main>
+    </div>
 </body>
 </html>
