--- a/views/mission_creations.ejs
+++ b/views/mission_creations.ejs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="container">
+        <main>
     <h1>Create a mission</h1>
     <form action="/missionCreation/createmission" method='POST'>
         <input type="text" placeholder="Enter Todo Item" name='todoItem'>
@@ -17,8 +19,10 @@
     
     <a href="/welcome"> Homepage</a> <!-- go to task creating page -->
     <a href="/missions"> Current Missions</a> <!-- go to look at today's objectives/task -->
-    <a href="/logout">Logout</a>
+    <a href="/logout" class="btn-secondary">Logout</a>
 
     <script src="js/main.js"></script>
+        </main>
+    </div>
 </body>
 </html>
