--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="container">
+        <main>
     <h1>Todos</h1>
     <ul>
     <% todos.forEach( el => { %>
@@ -22,11 +24,13 @@
 
     <form action="/todos/createTodo" method='POST'>
         <input type="text" placeholder="Enter Todo Item" name='todoItem'>
-        <input type="submit">
+        <input type="submit" class="btn-primary">
     </form>
 
-    <a href="/logout">Logout</a>
+    <a href="/logout" class="btn-secondary">Logout</a>
 
     <script src="js/main.js"></script>
+        </main>
+    </div>
 </body>
 </html>
