--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -11,13 +11,13 @@
     <div class="container">
         <main>
     <h1>Todos</h1>
-    <ul>
+    <ul class="todo_ul">
     <% todos.forEach( el => { %>
             <li class='todoItem' data-id='<%=el._id%>'>
-                <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
+                <span class='<%= el.completed === true ? 'completed' : 'not'%> todo_task'><%= el.todo %></span>
                 <span class='del'> Delete </span>
             </li>
-    <% }) %>    
+    <% }) %>
     </ul>
 
     <h2><%= user.userName %> has <%= left %> things left to do.</h2>
